# SkimXDP

./: README.md  pyproject.toml
demo/: train.py
docs/experiment/: experiment.ipynb  lr.pkl  tree.pkl
model/: lr.pkl  mlp.pkl  rf.pkl  ridge.pkl  tree.pkl
outputs/: bpf_helpers.h  skX.c  skX_dt.c  skX_lr.c  skX_lr.h  skX_mlp.c  skX_mlp.h  skX_rf.c  skX_ridge.c  skX_tree.c  skX_tree.h
src/: Untitled.ipynb
src/skX/: app.py  exporter.py  template.py
